# victory-terminal

./: Cargo.toml  README.md  lcov.info  package.json
.github/workflows/: rust.yaml
app/: background.js  background.js.map
renderer/pages/: home.jsx  serial.jsx  serial_out.jsx
src/: lib.rs  main.rs
src/app/: controller.rs  dock_window.rs  mod.rs  state.rs
src/app/widgets/: add_connection.rs  add_entry.rs  entry_list.rs  message_list.rs  mod.rs
src/connections/: con_mock.rs  mod.rs  options.rs
src/message/: mod.rs
